# Pantheon-Trades

./: .env.example  .gitignore  .sops.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  justfile  llms.txt  package.json  pnpm-lock.yaml  vercel.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  (+2 more)
artifacts/: README.md
contracts/: DEPLOY_ARC.md  README.md
db/: schema.sql
deployments/: arc-testnet.json
docs/: AGENTS.md  AGENT_CLASSES.md  AGENT_PASSPORTS.md  AGORA.md  APOLLO.md  ARCHITECTURE.md  ARC_INTEGRATION.md  AREOPAGUS.md  ARGOS.md  ATHENS_MAPPING.md  AUTH.md  BOULE.md  CHANGELOG_TIERS.md  CHEAPNESS_MODEL.md  CONSTITUTION.md  DEMO_SCRIPT.md  EDGE_SOURCES.md  ELYSIUM.md  EMERGENCY_PAUSE.md  ERC8004_INTEGRATION.md  FEES_AND_EDGE.md  HACKATHON_SUBMISSION.md  HERMES.md  LATENCY_BUDGET.md  MEV_NOTES.md  MOIRAI_LAWS.md  OLYMPUS.md  ORACLE_HALL.md  PANTHEON_TRADES.md  PARTHENON.md  PNYX.md  POLYMARKET_INTEGRATION.md  POLYMARKET_NOTES.md  PROOF_OF_RESTRAINT.md  PYTHIA.md  RFB_MAPPING.md  ROADMAP.md  ROOMS.md  SCORING.md  SECURITY.md  (+7 more)
scripts/: backtest_council_vs_manifold.py  backtest_sources_xml.py  live_paper_trade_coingecko.py  live_test_gemini.py  paper_trade_polymarket.py  smoke_polymarket_proxy.ps1
services/elysium/: pyproject.toml
services/elysium/src/elysium/: backtest.py  counterfactual.py  paper_arena.py  replay.py
tests/: arc_probe.py  backtest_polymarket.py  bench.py  bootstrap_historical_data.py  build_demo_traces.py  capture_demo_trace.py  demo_live_council.py  dry_run_chain_write.py  test_pipeline_integration.py
(+308 files in other folders)
