[project]
name = "elysium"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pantheon-core",
    "pydantic>=2.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "structlog>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elysium"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
pantheon-core = { path = "../../packages/pantheon-core", editable = true }

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-mock>=3.14"]
